@@ -1,3 +1,6 @@
+UNRELEASED:
+- Make the funny dump sound optional by adding a setting for it
+
 v0.8.0:
 - Dumping spells requires being able to edit wands.
 - Add a setting to turn that requirement off.
